<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tchê Controla</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="input_login">Login</string>
    <string name="input_senha">Senha</string>
    <string name="btn_conectar">Conectar</string>
    <string name="btn_cadastre">Cadastre-se</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_criarNovaConta">Criar uma Nova Conta</string>
    <string name="label_nome">Nome</string>
    <string name="label_confirmarSenha">Confirmar Senha</string>
    <string name="label_email">E-mail</string>
    <string name="label_18anos">Declaro que tenho 18 anos ou mais</string>
    <string name="label_salvar">Salvar</string>
    <string name="title_activity_primeira">Dashboard</string>
    <string name="label_bemVindo">Bem Vindo</string>
    <string name="sessao_ativa">Bem vindo ao Tchê Controla</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="acesso_negado">Acesso Negado</string>
    <string name="acesso_negado_para">Acesso negado para:</string>
    <string name="label_ajudaNome">Quem pode me ajudar?</string>
    <string name="label_ajudaTelefone">Qual o telefone da minha ajuda?</string>
    <string name="error_confirm_password">A senha não foi confirmada corretamente</string>
    <string name="error_login_utilizado">Esse login já esta sendo utilizado</string>
    <string name="error_email">O e-mail inserido não é válido</string>
    <string name="label_cadastro">Cadastro</string>
    <string name="label_cadastro_sucess">Cadastro efetuado com sucesso</string>
    <string name="label_obrigatorio"> é de preenchimento obrigatório</string>
    <string name="label_e"> e </string>
    <string name="error_insert">Erro ao inserir o registro no sistema </string>
    <string name="title_activity_consumo">Bebendo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="pergunta_festa">Qual o nome da festa que vocês está?</string>
    <string name="pergunta_gasto">Qual será o seu limite de gastos hoje?</string>
    <string name="pergunta_bebida">Qual o valor da bebida de hoje?</string>
    <string name="title_activity_party_list_view">PartyListView</string>
    <string name="pergunta_pub">Qual o nome do estabelecimento que você está?</string>
    <string name="title_consumo_add_bebida">Gasto Atual</string>
    <string name="valor_bebida">Valor da Bebida</string>
    <string name="gasto_maximo">Gasto Máximo</string>
    <string name="quantidade_disponivel">Quantas ainda posso beber?</string>

</resources>
