
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
      <!-- 2 columns -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_weight="0.59"
            android:text="@string/title_criarNovaConta"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="12dp" />
        
        
    </TableRow>
     
     
     
    <!-- 2 columns -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
        <EditText
        android:id="@+id/et_cad_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/label_nome"
        android:textColorHint="#FF7F50"
        android:inputType="textEmailAddress"
        
        
         />
    </TableRow>
 
    <!-- edittext span 2 column -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
         <EditText
            android:id="@+id/et_cad_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColorHint="#FF7F50"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress" />
    </TableRow>
 
    <!-- just draw a red line -->
    <!--  <View
        android:layout_height="2dip"
        android:background="#FF0000" />-->
 
    <!-- 3 columns -->
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
        <EditText
            android:id="@+id/et_cad_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:textColorHint="#FF7F50"
            android:hint="@string/input_login" />
    </TableRow>
 
    <!-- display this button in 3rd column via layout_column(zero based) -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
        <EditText
            android:id="@+id/et_cad_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.58"
            android:ems="10"
            android:textColorHint="#FF7F50"
            android:hint="@string/input_senha"
            android:inputType="textPassword" />
    </TableRow>
 
    <!-- display this button in 2nd column via layout_column(zero based) -->
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
        <EditText
            android:id="@+id/et_cad_confirmarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColorHint="#FF7F50"
            android:hint="@string/label_confirmarSenha"
            android:inputType="textPassword" />
    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        
         <EditText
            android:id="@+id/et_cad_ajudanome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_ajudaNome"
           android:inputType="textEmailAddress"  />
        
         
         
       </TableRow>
       <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
     
     
     	<EditText
            android:id="@+id/et_cad_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_ajudaTelefone"
            android:inputType="phone" >
            
        </EditText>
        
       </TableRow>
       
       <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
       
       <CheckBox
        android:id="@+id/input_check_tenho18anos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_cad_salvar"
        android:layout_below="@+id/linearLayout3"
        android:text="@string/label_18anos" />
       
       </TableRow>
       
       <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
       
       
       
       <Button
        android:id="@+id/btn_cad_salvar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout9"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:layout_span="2"
        android:layout_marginLeft="30dp"
        android:text="@string/label_salvar" />
 
       </TableRow>
</TableLayout>

